@@ -17,8 +17,8 @@ along with this program; if not, write to the Free Software
 Foundation, 59 Temple Place - Suite 330,
 Boston, MA 02111-1307, USA.  */
 
-#include "ansidecl.h"
 #include "config.h"
+#include "ansidecl.h"
 
 #include "objalloc.h"
 
